--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.SchoolClinicAppointment"
         tools:targetApi="31">
         <activity
+            android:name=".Register"
+            android:exported="false" />
+        <activity
             android:name=".StudentView"
             android:exported="false" />
         <activity
@@ -22,10 +25,6 @@
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="false"
-            android:parentActivityName=".statusScreen" />
-        <activity
-            android:name=".statusScreen"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
