very much updated need design tho

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/applogo"
+        android:label="MMCM MediPoint"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SchoolClinicAppointment"
@@ -17,12 +17,7 @@
         <activity
             android:name=".AvailableAppointments"
             android:exported="false" />
-        <activity
-            android:name=".scam"
-            android:exported="false" />
-        <activity
-            android:name=".AppointmentAdapter"
-            android:exported="false" /> <!-- Main Entry Activity -->
+        <!-- Main Entry Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -35,12 +30,6 @@
         <activity
             android:name=".StudentHomeView"
             android:exported="true" />
-        <activity
-            android:name=".AppointmentsPagerAdapter"
-            android:exported="false" />
-        <activity
-            android:name=".AvailableAppointmentsActivity"
-            android:exported="false" />
         <activity
             android:name=".ImmediateCareActivity"
             android:exported="false" />
